Move tooltipArrow by -1px to avoid having a gap.

--- a/packages/moonstone/TooltipDecorator/Tooltip.less
+++ b/packages/moonstone/TooltipDecorator/Tooltip.less
@@ -66,7 +66,7 @@
 	&.above {
 		&.rightArrow {
 			.tooltipArrow {
-				transform: translateY(99%) rotate(-90deg) scaleX(-1);
+				transform: translateY(100%) translateY(-1px) rotate(-90deg) scaleX(-1);
 				left: 0;
 				bottom: 0;
 			}
@@ -78,7 +78,7 @@
 
 		&.leftArrow {
 			.tooltipArrow {
-				transform: translate(100%, 99%) rotate(90deg);
+				transform: translate(100%, 100%) translateY(-1px) rotate(90deg);
 				bottom: 0;
 				right: 0;
 			}
